Fix Geocoder to use updated URL and throws an error unless key is specified as it is now required Add :premium switch to use ws.geonames.net Add Tests

--- a/fixtures/vcr_cassettes/geonames_geocode.yml
+++ b/fixtures/vcr_cassettes/geonames_geocode.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://ws.geonames.org/postalCodeSearch?maxRows=10&placename=Adelaide
+    uri: http://api.geonames.org/postalCodeSearch?maxRows=10&placename=Adelaide&username=demo
     body:
       encoding: US-ASCII
       string: ''
